--- a/.eslintignore
+++ b/.eslintignore
@@ -9,7 +9,9 @@ src/interpreter/plugin/3rdparty
 
 # Configurations
 *.config.js
+karma.*
 doc
+test/_setupFiles/*.js
 
 # Auto-generated directories
 commonjs
@@ -19,5 +21,7 @@ es
 languages
 lib
 script
+test-jasmine
+test-jest
 typedoc
 typings
