--- a/package.json
+++ b/package.json
@@ -75,13 +75,17 @@
     "verify:cjs": "node script/check-file.js commonjs",
     "verify:publish-package": "npm pack | node script/check-publish-package.js",
     "verify:typings": "tsc --noEmit",
+    "test": "npm-run-all lint test:jest test:browser",
+    "test:jest": "cross-env NODE_ICU_DATA=node_modules/full-icu jest",
+    "test:ci": "cross-env NODE_ICU_DATA=node_modules/full-icu node --expose-gc ./node_modules/jest/bin/jest --forceExit",
+    "test:browser": "cross-env-shell BABEL_ENV=dist env-cmd -f ht.config.js karma start",
     "typedoc:build-api": "cross-env NODE_OPTIONS=--openssl-legacy-provider typedoc --options .typedoc.md.ts",
     "lint": "eslint . --ext .js,.ts",
     "lint:fix": "eslint . --ext .js,.ts --fix",
     "audit": "npm audit --omit=dev",
-    "clean": "rimraf commonjs/ dist/ es/ languages/ lib/ typings/",
+    "clean": "rimraf commonjs/ dist/ es/ languages/ lib/ typings/ test-jasmine/",
     "compile": "tsc",
-    "check:licenses": "license-checker --production --excludePackages=\"hyperformula@3.1.1\" --onlyAllow=\"MIT; Apache-2.0; BSD-3-Clause; BSD-2-Clause; ISC; BSD; Unlicense\"",
+    "check:licenses": "license-checker --production --excludePackages=\"hyperformula@3.0.1\" --onlyAllow=\"MIT; Apache-2.0; BSD-3-Clause; BSD-2-Clause; ISC; BSD; Unlicense\"",
     "tsnode": "ts-node --transpile-only -O {\\\"module\\\":\\\"commonjs\\\"}"
   },
   "dependencies": {
@@ -103,6 +107,10 @@
     "@babel/preset-typescript": "^7.26.0",
     "@babel/register": "^7.25.9",
     "@babel/runtime": "^7.26.0",
+    "@types/exceljs": "^0.5.3",
+    "@types/jasmine": "^5.1.4",
+    "@types/jest": "^26.0.24",
+    "@types/jsdom": "^21.1.7",
     "@types/node": "^17.0.45",
     "@types/webpack-env": "^1.18.5",
     "@typescript-eslint/eslint-plugin": "^5.62.0",
@@ -115,10 +123,24 @@
     "env-cmd": "^10.1.0",
     "eslint": "^8.57.1",
     "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-jasmine": "^4.2.2",
+    "eslint-plugin-jest": "^27.9.0",
     "eslint-plugin-jsdoc": "^50.5.0",
     "eslint-plugin-license-header": "^0.6.1",
     "eslint-plugin-prettier": "^5.2.1",
     "esm": "^3.2.25",
+    "exceljs": "^4.4.0",
+    "full-icu": "^1.5.0",
+    "jasmine": "^5.4.0",
+    "jest": "^26.6.3",
+    "jsdom": "^25.0.1",
+    "karma": "^6.4.4",
+    "karma-chrome-launcher": "^3.2.0",
+    "karma-firefox-launcher": "^2.1.3",
+    "karma-jasmine": "^5.1.0",
+    "karma-jasmine-html-reporter": "^2.1.0",
+    "karma-sourcemap-loader": "^0.4.0",
+    "karma-webpack": "^4.0.2",
     "license-checker": "^25.0.1",
     "markdown-it-footnote": "^4.0.0",
     "markdown-it-regex": "^0.2.0",
@@ -129,6 +151,7 @@
     "string-replace-loader": "^2.3.0",
     "tar": "^7.4.3",
     "terser-webpack-plugin": "^4.2.3",
+    "ts-jest": "^26.5.6",
     "ts-loader": "^8.4.0",
     "ts-node": "^10.9.2",
     "typedoc": "^0.19.2",
